-- Generated by Mocodo 4.3.3

CREATE TABLE Category (
  PRIMARY KEY (categoryId),
  categoryId VARCHAR(42) NOT NULL,
  name       VARCHAR(42)
);

CREATE TABLE Country (
  PRIMARY KEY (countryId),
  countryId           VARCHAR(42) NOT NULL,
  code                VARCHAR(42),
  name                VARCHAR(42),
  currency            VARCHAR(42),
  isBillingAvailable  VARCHAR(42),
  isPlantingAvailable VARCHAR(42)
);

CREATE TABLE Location (
  PRIMARY KEY (locationId),
  locationId  VARCHAR(42) NOT NULL,
  name        VARCHAR(42),
  region      VARCHAR(42),
  coordinates VARCHAR(42),
  description VARCHAR(42),
  imageUrl    VARCHAR(42),
  countryId   VARCHAR(42) NOT NULL
);

CREATE TABLE Order (
  PRIMARY KEY (orderId),
  orderId        VARCHAR(42) NOT NULL,
  totalAmount    VARCHAR(42),
  totalExclTax   VARCHAR(42),
  totalVatAmount VARCHAR(42),
  currency       VARCHAR(42),
  contactEmail   VARCHAR(42),
  invoiceNumber  VARCHAR(42),
  invoiceDate    VARCHAR(42),
  paymentStatus  VARCHAR(42),
  orderStatus    VARCHAR(42),
  userId         VARCHAR(42) NOT NULL
);

CREATE TABLE OrderAddress (
  PRIMARY KEY (orderAddressId),
  orderAddressId VARCHAR(42) NOT NULL,
  type           VARCHAR(42),
  firstName      VARCHAR(42),
  lastName       VARCHAR(42),
  street         VARCHAR(42),
  streetLine2    VARCHAR(42),
  postalCode     VARCHAR(42),
  city           VARCHAR(42),
  countryCode    VARCHAR(42),
  phone          VARCHAR(42),
  orderId        VARCHAR(42) NOT NULL
);

CREATE TABLE OrderItem (
  PRIMARY KEY (orderId, treeId),
  orderId   VARCHAR(42) NOT NULL,
  treeId    VARCHAR(42) NOT NULL,
  quantity  VARCHAR(42),
  unitPrice VARCHAR(42),
  vatRate   VARCHAR(42)
);

CREATE TABLE Role (
  PRIMARY KEY (roleId),
  roleId VARCHAR(42) NOT NULL,
  name   VARCHAR(42)
);

CREATE TABLE Tree (
  PRIMARY KEY (treeId),
  treeId            VARCHAR(42) NOT NULL,
  name              VARCHAR(42),
  scientificName    VARCHAR(42),
  description       VARCHAR(42),
  imageUrl          VARCHAR(42),
  price             VARCHAR(42),
  heightMax         VARCHAR(42),
  stockQuantity     VARCHAR(42),
  lowStockThreshold VARCHAR(42),
  categoryId        VARCHAR(42) NOT NULL,
  locationId        VARCHAR(42) NOT NULL
);

CREATE TABLE User (
  PRIMARY KEY (userId),
  userId          VARCHAR(42) NOT NULL,
  email           VARCHAR(42),
  password        VARCHAR(42),
  firstName       VARCHAR(42),
  lastName        VARCHAR(42),
  avatarUrl       VARCHAR(42),
  isEmailVerified VARCHAR(42),
  roleId          VARCHAR(42) NOT NULL
);

ALTER TABLE Location ADD FOREIGN KEY (countryId) REFERENCES Country (countryId);

ALTER TABLE Order ADD FOREIGN KEY (userId) REFERENCES User (userId);
ALTER TABLE OrderAddress ADD FOREIGN KEY (orderId) REFERENCES Order (orderId);

ALTER TABLE OrderItem ADD FOREIGN KEY (treeId) REFERENCES Tree (treeId);
ALTER TABLE OrderItem ADD FOREIGN KEY (orderId) REFERENCES Order (orderId);

ALTER TABLE Tree ADD FOREIGN KEY (locationId) REFERENCES Location (locationId);
ALTER TABLE Tree ADD FOREIGN KEY (categoryId) REFERENCES Category (categoryId);

ALTER TABLE User ADD FOREIGN KEY (roleId) REFERENCES Role (roleId);
